--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <h2>Luyện tập tạo và sử dụng hàm</h2>
 </head>
 <body>
-<button onclick="alertMessager()">Bai1</button>
+<button onclick="argument()">Bai2</button>
 <script>
-  function alertMessager() {
-      alert("Xin chao");
+  function argument() {
+      let ar = parseInt(prompt("Enter a number: "));
+      let ar1 = ar + 1;
+      alert(ar1);
   }
 </script>
 </body>
