--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
   <h2>Luyện tập tạo và sử dụng hàm</h2>
 </head>
 <body>
-<button onclick="argument()">Bai2</button>
+<button onclick="parameter()">Bai3</button>
 <script>
-  function argument() {
-      let ar = parseInt(prompt("Enter a number: "));
-      let ar1 = ar + 1;
-      alert(ar1);
+  function parameter() {
+      let a = parseInt(prompt("Nhập vào số thứ nhất: "));
+      let b = parseInt(prompt("Nhập vào số thứ hai: "));
+      let c = a + b;
+      if (a > b) {
+          alert(a + " lon hon " + b);
+      }else {
+          alert("Tong cua hai so a va b la: " + c);
+      }
   }
 </script>
 </body>
