--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
   <h2>Luyện tập tạo và sử dụng hàm</h2>
 </head>
 <body>
-<button onclick="parameter()">Bai3</button>
 <script>
-  function parameter() {
-      let a = parseInt(prompt("Nhập vào số thứ nhất: "));
-      let b = parseInt(prompt("Nhập vào số thứ hai: "));
-      let c = a + b;
-      if (a > b) {
-          alert(a + " lon hon " + b);
-      }else {
-          alert("Tong cua hai so a va b la: " + c);
-      }
+  function addNumbers() {
+      let firstNum = 4;
+      let secondNum = 8;
+      let result = firstNum + secondNum;
+      return result;
   }
+  result = 0;
+  alert(result);
+  result = addNumbers();
+  alert(result);
 </script>
 </body>
 </html>
